--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -35,9 +35,9 @@
         <ion-list>
             <ion-item>
 
-                <ion-input placeholder="message..."></ion-input>
+                <ion-input placeholder="message..." [(ngModel)]="message">{{message}}</ion-input>
 
-                <ion-icon item-content name="send"></ion-icon>
+                <ion-icon item-content name="send" (click)="sendMessage(message)"></ion-icon>
 
             </ion-item>
         </ion-list>
