--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar color="secondary">
         <ion-title>
-            Firestore M
+            What's Fire !
         </ion-title>
         <ion-buttons right (click)="logout()">
             <button ion-button icon-only>
