--- a/src/pages/new-chat/new-chat.html
+++ b/src/pages/new-chat/new-chat.html
@@ -7,7 +7,7 @@
 
 <ion-header>
 
-    <ion-navbar>
+    <ion-navbar color="secondary">
         <ion-title>Create a new chat</ion-title>
     </ion-navbar>
 
@@ -31,8 +31,7 @@
 
         </ion-item>
     </ion-list>
-
-
     <br>
+    <!--<button ion-button (click)="store()">Upload</button>-->
     <button ion-button full (click)="newChat(chatname,uid)" id="dark-button">Create</button>
 </ion-content>
