--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-    <ion-navbar>
+    <ion-navbar color="secondary">
         <ion-title>Login</ion-title>
     </ion-navbar>
 
